# rust_audio_plugins

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bundler.toml  package.json  rust_audio_plugins.code-workspace  setup.sh
anymap-1.0.0-beta.2/: .cargo_vcs_info.json
cargo_nih_plug/: Cargo.toml  README.md
custom_plugins/harmonic_nxo/: Cargo.toml
custom_plugins/harmonic_nxo/src/: ADSR.rs  ipc_rpc.rs  lib.rs
custom_plugins/harmonic_nxo/web-gui/: package.json  pnpm-lock.yaml  vite.config.ts
custom_plugins/harmonic_nxo/web-gui/src/: App.tsx  index.css  nih-plug-webview-window.ts
custom_plugins/harmonic_nxo/web-gui/src/components/: HarmonicsTable.tsx  NXOTable.tsx  PianoWidget.tsx
custom_plugins/harmonic_nxo/web-gui/src/exampleLua/: guitar.lua
custom_plugins/harmonic_nxo/web-gui/src/utils/: ipc-rpc.ts  useMonitorSize.ts  validateLuaResult.ts
custom_plugins/harmonic_nxo/web-gui/src/workers/: luaWorker.ts
custom_plugins/harmonic_nxo/web-gui/styles/: sliders.css
nih-plug-webview/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
nih-plug-webview/example/: Cargo.toml
nih-plug-webview/example/src/: gui.html  lib.rs
nih-plug-webview/src/: lib.rs  script.js
nih_plug_derive/: Cargo.toml
nih_plug_egui/: Cargo.toml  README.md
nih_plug_iced/: Cargo.toml  README.md
nih_plug_vizia/: Cargo.toml  README.md
nih_plug_xtask/: Cargo.toml  README.md
scripts/: bundle-harmonic-nxo-release.sh  migrate-basdp-fork.sh  start-gui-dev-server.sh
src/: audio_setup.rs  buffer.rs  context.rs  debug.rs  editor.rs  event_loop.rs  (+8 more)
(+192 files in other folders)
