[package]
name = "nih_plug_webview"
version = "0.0.0"
edition = "2021"
authors = ["Max Huttunen <max.huttunen@gmail.com>"]
license = "ISC"

description = "An adapter to use webview GUIs with NIH-plug"

[dependencies]
nih_plug = { path = "..", features = ["assert_process_allocs"] }
parking_lot = "0.12.1"
serde_json = "1.0"
wry = { version = "0.35.1" }
baseview = { git = "https://github.com/RustAudio/baseview" }
raw-window-handle = "0.5"
crossbeam = "0.8.2"
keyboard-types = "0.6.2"
