[package]
name = "harmonic_nxo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { path = "../..", features = ["assert_process_allocs"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
nih_plug_webview = { path = "../../nih-plug-webview" }